---------------------------------------------

- v1.0.1011                                 -
---------------------------------------------
- 2020-06-14                                -
---------------------------------------------
.: WSM: BugFix: Too many items and mistakenly show pagination (WSW-56)
.: WSM: Task: Fixed Controller tab overlapped issue (WSW-39)

---------------------------------------------
- 2020-06-13                                -
---------------------------------------------
.: WSM: Task: Adding component displayed preview (WSM-77)
.: WSW: Task: Shop not found if username has changed when scan qr code (WSW-49)
.: WSW: Task: Checking item type implementation (WSW-47)
.: WSW: Task: CLONE - Change profile bezel (WSW-53)
.: WSW: BugFix: Fix url to page issue (WSW-49)

---------------------------------------------
- 2020-06-11                                -
---------------------------------------------
.: WSM: Task: Unpublish page to not show to public (WSM-118)

---------------------------------------------
- 2020-06-10                                -
---------------------------------------------
.: WSW: Task: Change layout in website (WSW-39)
.: WSW: BugFix: Website icon should be removed when no website url (WSW-45)
.: WSW: Task: Loading top bar (WSW-41)

- v1.0.1010                                 -
---------------------------------------------
- 2020-06-07                                -
---------------------------------------------
.: WSW: Task: Add an 404 page to have better SEO (WSW-33)
.: WSW: Task: Update testing script (WSW-25)
.: WSW: Task: Update banner (WSW-24)
.: WSW: Task: Fix CORS issue (WSW-25)

---------------------------------------------
- 2020-06-06                                -
---------------------------------------------
.: WSW: Task: Design a new default user banner (WSW-24)
.: WSW: Task: Add a default profile image to item (WSW-27)
.: WSW: Task: Unpublished Items in category is displayed (WSW-31)