@@ -75,6 +75,9 @@
         margin-top: 30px;
         color: #fff; 
         background-color: #282C35;
+        &.swiper__image-label-offer{
+            background-color: #990000;
+        }
     }
 
     .list-item-info__profile-container {
